# ato_web_app

./: .flake8  .pre-commit-config.yaml  manage.py  pyproject.toml
afetyardim/: asgi.py  settings.py  urls.py  wsgi.py
istekler/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
istekler/migrations/: 0001_initial.py  0002_rename_kullanici_istek_kullanici_adi.py
istekler/templates/istekler/: base.html  hastane.html  hastane_ara.html  hastane_ekle.html  hastane_guncelle.html  hastane_istekleri.html  home.html  istek_ara.html  istek_ekle.html  istek_guncelle.html  istek_listesi.html  isteklerim.html  navbar.html  show_hastane.html  show_istek.html
kullanicilar/: apps.py  forms.py  urls.py  views.py
kullanicilar/templates/authenticate/: login.html  register_user.html
