[tool.poetry]
name = "ato-web-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ato_web_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"
reportlab = "3.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
